Adds functionality to scrape data into the database.

--- a/jobs-scrappe.ipynb
+++ b/jobs-scrappe.ipynb
@@ -51,7 +51,6 @@
     "    sel_job_item_salary = '.jobResultsSalary'\n",
     "    sel_job_item_loc = '.jobResultsLoc'\n",
     "    sel_job_item_type = '.jobResultsType'\n",
-    "    sel_job_item_when = '.when'\n",
     "\n",
     "    # Selector job details container\n",
     "    sel_job_detail_container = \"#JobDetailContainer .jsCustomScrollContainer\"\n",
@@ -82,7 +81,6 @@
     "        salary = html_utils.find_element_or_none(job_item, sel_job_item_salary)\n",
     "        loc = html_utils.find_element_or_none(job_item, sel_job_item_loc)\n",
     "        type = html_utils.find_element_or_none(job_item, sel_job_item_type)\n",
-    "        when = html_utils.find_element_or_none(job_item, sel_job_item_when)\n",
     "        \n",
     "        # Initialize fields in description section\n",
     "        skills = \"\"\n",
@@ -127,7 +125,7 @@
     "            permalink_try = html_utils.find_element_or_none(job_detail_container, sel_job_detail_permalink)\n",
     "            permalink = text_utils.join_without_overlap(permalink, permalink_try)\n",
     "\n",
-    "        print(f\"{index + 1}-Item\\ntitle:{title}\\nsalary:{salary}\\nloc:{loc}\\ntype:{type}\\nwhen:{when}\\n\")\n",
+    "        print(f\"{index + 1}-Item\\ntitle:{title}\\nsalary:{salary}\\nloc:{loc}\\ntype:{type}\\n\")\n",
     "        print(f\"{index + 1}-Details\\nskills:{skills}\\nduration:{duration}\\nstart_date:{start_date}\\nrecruiter:{recruiter}\\nref:{ref}\\nposted_date:{posted_date}\\npermalink:{permalink}\\n\")\n",
     "\n",
     "\n",
